dashboard fixes
